# emojito

./: Cargo.toml  LICENSE.md  Readme.md
.github/workflows/: ci.yml
benches/: benchmark.rs  tweets.json
src/: lib.rs
