[package]
name = "emojito"
version = "0.3.0"
edition = "2021"
authors = ["Benedikt Terhechte <terhechte@gmail.com>"]
license = "MIT"
description = "Find all the Emoji in a string. Supports composed emoji."
readme = "README.md"
repository = "https://github.com/terhechte/emojito"
homepage = "https://github.com/terhechte/emojito"
keywords = ["emoji", "string", "find", "search", "unicode"]
categories = ["text-processing", "parsing-tools", "encoding"]
exclude = [
    "benches/tweets.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unic-emoji-char = "0.9.0"
emoji = "0.2.1"

