[package]
name = "emojito"
version = "0.3.5"
edition = "2021"
authors = ["Benedikt Terhechte <terhechte@gmail.com>"]
license = "MIT"
description = "Find all the Emoji in a string. Supports composed emoji."
readme = "README.md"
repository = "https://github.com/terhechte/emojito"
homepage = "https://github.com/terhechte/emojito"
keywords = ["emoji", "string", "find", "search", "unicode"]
categories = ["text-processing", "parsing", "encoding"]
exclude = [
    "benches/tweets.json",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emojis = "0.5.2"
icu_testdata = "1.0.0"
icu_properties = "1.0.0"
